Have webpack handle ts transpiling for the app

--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"build": "npm run tsc && npm run sass && npm run webpack",
-		"dev": "concurrently \"tsc --watch\" \"npm run dev:sass\" \"npm run dev:build\" \"npm run dev:start\"",
+		"build": "tsc && npm run webpack",
+		"dev": "concurrently \"tsc --watch\" \"npm run dev:build\" \"npm run dev:start\"",
 		"dev:build": "webpack --config=webpack.development.config.js --watch",
-		"dev:sass": "sass --watch src/frontend/styles/styles.scss build/frontend/styles/styles.css",
-		"dev:start": "nodemon build/server/index",
-		"sass": "sass src/frontend/styles/styles.scss build/frontend/styles/styles.css",
-		"start": "node build/server/index",
+		"dev:start": "nodemon build/index",
+		"start": "node build/index",
 		"test": "jest",
 		"test:watch": "jest --watch",
-		"tsc": "tsc",
 		"webpack": "webpack --config=webpack.production.config.js"
 	},
 	"author": "",
