--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
 		"esModuleInterop": true
 	},
 	"exclude": ["node_modules"],
-	"include": ["src/server", "src/frontend"]
+	"include": ["src/server"]
 }
