--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
 	"compilerOptions": {
-		"outDir": "./build/",
+		"outDir": "./build/server",
 		"target": "es5",
 		"module": "commonjs",
 		"jsx": "preserve",
 		"moduleResolution": "node",
 		"esModuleInterop": true
 	},
-	"exclude": ["node_modules"],
-	"include": ["src/server"]
+	"exclude": ["node_modules", "src/frontend"],
+	"include": ["src"]
 }
